<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="label_glide">Glide - Image Loading Library by BumpTech</string>
    <string name="label_load_app">LoadApp - Current repository by Udacity</string>
    <string name="label_retrofit">Retrofit - Type-safe HTTP Client for Android and Kotlin by Square, Inc</string>

    <string name="url_glide" translatable="false">https://github.com/bumptech/glide/archive/master.zip</string>
    <string name="url_load_app" translatable="false">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter/archive/master.zip</string>
    <string name="url_retrofit" translatable="false">https://github.com/square/retrofit/archive/master.zip</string>

    <string name="error_please_select_option">Please select a download option.</string>

    <string name="load_app_notification_channel_id">load_app</string>
    <string name="load_app_notification_channel_name">Load App</string>

    <string name="label_success">Success</string>
    <string name="label_failure">Failure</string>

    <string name="label_file_name">File Name:</string>
    <string name="label_file_status">Status:</string>

</resources>
