<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/content_detail_scene"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <TextView
        android:id="@+id/label_file_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/half_default_gap"
        android:layout_marginTop="@dimen/default_gap"
        android:layout_marginEnd="@dimen/half_default_gap"
        android:text="@string/label_file_name"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_toolbar" />

    <TextView
        android:id="@+id/value_file_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/half_default_gap"
        android:layout_marginEnd="@dimen/half_default_gap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
        app:layout_constraintTop_toTopOf="@id/label_file_name"
        tools:text="@string/label_retrofit" />

    <TextView
        android:id="@+id/label_file_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/half_default_gap"
        android:layout_marginTop="@dimen/default_gap"
        android:layout_marginEnd="@dimen/half_default_gap"
        android:text="@string/label_file_status"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_file_name" />

    <TextView
        android:id="@+id/value_file_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/half_default_gap"
        android:layout_marginEnd="@dimen/half_default_gap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
        app:layout_constraintTop_toTopOf="@id/label_file_status"
        tools:text="@string/label_success" />

    <Button
        android:id="@+id/ok_button"
        style="@style/CustomButtonStyle"
        android:background="@color/colorAccent"
        android:text="@android:string/ok"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="?attr/actionBarSize" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="label_file_name,value_file_name" />

</androidx.constraintlayout.motion.widget.MotionLayout>
